# simple_ncurses_snake

./: CMakeLists.txt  README.md  cpoint.h  main.cpp  screen.cpp  screen.h  snake.cpp  snake.h  winsys.cpp  winsys.h
